put header bar above other RES items in top bar with z-index. fixes an issue with no number apparently.

--- a/css/REShacks.css
+++ b/css/REShacks.css
@@ -42,5 +42,7 @@ a.voteWeight {
 #NREMail.havemail {background-position:0 -9px !important;}
 #NREMail {height:9px !important;}
 
+#header-bottom-right {z-index:9999;}
+
 
 /** +++ RES HACKS ENDS +++ **/
